--- a/build.properties
+++ b/build.properties
@@ -1,3 +1,4 @@
-titanium.platform=/Library/Application Support/Titanium/mobilesdk/osx/1.6.0/android
-android.platform=/opt/android-sdk/platforms/android-4
-google.apis=/opt/android-sdk/add-ons/addon_google_apis_google_inc_4
+android.ndk=/Applications/android-ndk-r8
+titanium.platform=/Users/joscandreu/Library/Application Support/Titanium/mobilesdk/osx/2.1.4.GA/android
+android.platform=/Applications/platforms/android-8
+google.apis=/Applications/add-ons/addon_google_apis_google_inc_8
